Fixing alignment issues

--- a/personal-folder/styles/styles.css
+++ b/personal-folder/styles/styles.css
@@ -125,8 +125,8 @@ footer .social img{
 }
 .home-grid{
   display: grid;
-  grid-template-columns: 10fr;
-  grid-template-rows: 10fr;
+  grid-template-columns: 50%, 50%;
+  grid-template-rows: 50%, 50%;
   margin: 100px;
 }
 .subpage-grid{
@@ -232,34 +232,31 @@ img{
   grid-row: 3/4;
 }
 .three-card{
-  margin: 200px 0;
-  grid-column: 2/3;
-  grid-row: 1/2;
+  margin: 100px 0;
+  grid-column: 2;
+  grid-row: 1;
   display: block;
-  margin-top: 100px;
-  margin-left: auto;
-  margin-right: 200px;
 }
 .four-card{
-  margin: 200px 0;
-  grid-column: 1/2;
-  grid-row: 2/3;
+  margin: 100px 0;
+  grid-column: 1;
+  grid-row: 2;
   display: block;
-  margin-top: -100px;
-  margin-left: 75px;
+  margin-left: 300px;
 }
 .text-one{
-  grid-column: 1/2;
-  grid-row: 1/2;
+  grid-column: 1;
+  grid-row: 1;
   margin-top: 100px;
   margin-left: 200px;
   width: 50%;
   text-align: center;
 }
 .text-two{
-  grid-column: 2/3;
-  grid-row: 2/3;
-  margin-left: 150px;
+  grid-column: 2;
+  grid-row: 2;
+  margin-right: 300px;
+  margin-top: 100px;
   width: 50%;
   text-align: center;
 }
